# suno-multi-mcp

./: mcp.yaml  pyproject.toml
src/suno_mcp/: __init__.py  exceptions.py  server.py
src/suno_mcp/browser/: __init__.py  manager.py  navigator.py
src/suno_mcp/session/: __init__.py  store.py
src/suno_mcp/tools/: __init__.py  auth_tools.py  browser_tools.py  download_tools.py  generate_tools.py  library_tools.py
tests/: conftest.py
tests/unit/: test_browser_manager.py  test_session_store.py  test_tools.py
